--- a/css/styles.css
+++ b/css/styles.css
@@ -23,8 +23,7 @@ img {
 body {
   margin: 0;
   font-size: 1.6rem;
-  background-color: #ffffff;
-  /* background-color: #ffffff; */
+  background-color: white;
   color:#331507;
   --BKcolor-HDFT: #9e9e9e;
 }
@@ -138,7 +137,7 @@ body {
   width: var(--img-width);
   margin: 5px;
   padding: 5px;
-  border: rgb(170, 170, 170) solid 3px;
+  border: #aaaaaa solid 3px;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -164,7 +163,7 @@ body {
 }
 #works li img:hover {
   opacity: .8;
-  transform: scale(1.3, 1.3);
+  transform: scale(1.2, 1.2);
 }
 
 #profile {
