--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ body {
   vertical-align: middle;
 }
 
-.local-link ul {
+.local-link > ul {
   list-style: none;
   min-width: 300px;
   width: 400px;
@@ -66,6 +66,46 @@ body {
   padding: 0;
   display: flex;
   justify-content: space-between;
+}
+
+/* メガメニュー */
+.local-link .works {
+  position: relative;
+}
+.local-link .works .mega {
+  position: absolute;
+  top: 100%;
+  left: -200%;
+  margin: 0;
+  padding: 0;
+  background-color: rgba(0,0,0,0.6);
+  /* width: 400px; */
+  width: 25em;
+  visibility: hidden;
+  opacity: 0;
+  transition: all .2s ease;
+}
+.local-link .works:hover .mega {
+  opacity: 1;
+  visibility: visible;
+}
+.mega li a, .mega li p {
+  font-weight: normal;
+  font-size: 1.8rem;
+  margin: 0;
+  color: white;
+}
+.mega li {
+  height: 12vh;
+  margin: 5px;
+  padding: 5px;
+  border: #aaaaaa solid 3px;
+  display: flex;
+  align-items: center;
+}
+.mega li a img {
+  height: 9vh;
+  object-fit: contain;
 }
 
 .local-link a {
@@ -82,7 +122,7 @@ body {
   border-bottom: 2px solid transparent;
   transition: all .5s;
 }
-.local-link a:hover, .return a:hover, .request a:hover, #works li p:nth-of-type(2):hover {
+.local-link a:hover, .return a:hover, .request a:hover, #works li p a:hover {
   border-bottom: 2px solid currentColor;
   animation: none;
 }
@@ -166,17 +206,16 @@ body {
   font-size: 2rem;
   color: inherit;
 }
-#works li p:nth-of-type(2) {
-  line-height: 1;
-  border-bottom: 2px solid transparent;
-  transition: all .5s;
-  animation: flicker 1.5s infinite alternate ease-in-out;
-}
+
 #works li p a {
   font-weight: bold;
   font-size: 1.8rem;
+  display: inline-block;
+  vertical-align: middle;
   line-height: 1;
   color: inherit;
+  border-bottom: 2px solid transparent;
+  transition: all .5s;
 }
 
 #works li p {
@@ -312,7 +351,7 @@ footer {
     transform: scale(1.2, 1.2);
   }
 
-  .local-link a, .return a, .request a, #works li p:nth-of-type(2) {
+  .local-link a, .return a, .request a, #works li p a {
     animation: flicker 1.5s infinite alternate ease-in-out;
   }
   @keyframes flicker {
@@ -340,6 +379,10 @@ footer {
   }
   .header-color {
     height: 22px; /* 上部固定navと高さを合わせる */
+  }
+  /* メガメニュー無効 */
+  .local-link .works .mega {
+    display: none;
   }
   .local-link {
     justify-content: space-between;
